# claude-code-project-best-practices

./: .gitignore  .markdownlint.jsonc  .markdownlintignore  .mcp.json  ABSORPTION-MAP.md  ARCHITECTURE.md  ARCHIVE.md  AUDIT-2026-02-27.md  AUDIT-CONTEXT.md  COMMUNITY-CONTRIBUTIONS.md  COMMUNITY-RESOURCES.md  CONTRIBUTING.md  DECISIONS.md  DOGFOODING-GAPS.md  INDEX.md  MIGRATION-GUIDE.md  ONE-LINE-PROMPT.md  PATTERN-LEARNING-PATH.md  PATTERN-QUALITY-CHECKLIST.md  PLAN.md  POSITIONING.md  QUARTERLY-REVIEW.md  QUICK-REFERENCE-PRINCIPLES.md  QUICKSTART.md  README.md  REFACTORING-PLAN-2026-01.md  SOURCE-REFRESH-2026-07-09-cowork.md  SOURCES-QUICK-REFERENCE.md  SOURCES.md  TOOLS-TRACKER.json  TOOLS-TRACKER.md  TROUBLESHOOTING.md  V2-COMPLIANCE-MATRIX.md  VERSION-TRACKING.md  WORKFLOW-STATUS.md  WORKFLOW-TEST-RESULTS.md  WORKFLOWS-ISSUES.md  WORKFLOWS-SETUP.md  package-lock.json  package.json
.claude/: CLAUDE.md  claude-tasks.json  mcp-server-spec.md  review-protocol.md  settings.json  settings.local.json
.github/: link-check-config.json
analysis/: CANONICAL-DOC-TEMPLATE.md  agent-driven-development.md  agent-evaluation.md  agent-principles.md  automated-config-assessment.md  behavioral-insights.md  claude-md-progressive-disclosure.md  confidence-scoring.md  cross-project-synchronization.md  dapr-durable-agents.md  domain-knowledge-architecture.md  (+33 more)
mcp-server/: pyproject.toml
mcp-server/src/best_practices_mcp/parsers/: __init__.py  markdown_parser.py
mcp-server/src/best_practices_mcp/tools/: sync_documentation.py  validate_patterns.py
mcp-server/tests/: __init__.py
(+228 files in other folders)
